--- a/PATH-SCRIPT-201608/domains_def.config
+++ b/PATH-SCRIPT-201608/domains_def.config
@@ -6,10 +6,12 @@
 # Section METEOROLOGY MODEL SYSTEM (WRF) &
 #         AIR QUALITY MODEL SYSTEM (MCIP, MET2CAMX, SMOKE, CMAQ, CAMX)
 ######################################################################
-#set G_DOMAINS_RES_MMS = (27 9 3 1)
-#set G_DOMAINS_RES_AQMS = (27 9 3 1)
-set G_DOMAINS_RES_MMS = (27 9 3)
-set G_DOMAINS_RES_AQMS = (27 9 3)
+set G_DOMAINS_RES_WRF = (27 9 3)
+set G_DOMAINS_RES_MCIP = (27 9 3)
+set G_DOMAINS_RES_MET2CAMX = (27 9 3)
+set G_DOMAINS_RES_SMOKE = (27 9 3)
+set G_DOMAINS_RES_CMAQ = (27 9 3)
+set G_DOMAINS_RES_CAMX = (27 9 3)
 
 set MAP_PROJECTION = "LAMBERT"
 setenv LAMBERT_CEN_LON 114
