--- a/PATH-SCRIPT-201608/path_run.config
+++ b/PATH-SCRIPT-201608/path_run.config
@@ -112,15 +112,7 @@ export CTM_USE_SMOKE
 export SMOKE4CMAQ
 export SMOKE4CAMX
 
-# The following variables define domain resolutions. 
-# G_DOMAINS_RES_MMS_gov defines domain resolutions for the Meteorology Model System
-# G_DOMAINS_RES_AQMS_gov defines domain resolutions for the Air Quality Model System
-# Warning: The domains definition in $pwd/domains_def.config 
-#          should be edited as follows
-#export G_DOMAINS_RES_MMS_gov="27 9 3 1"
-#export G_DOMAINS_RES_AQMS_gov="27 9 3 1"
-export G_DOMAINS_RES_MMS_gov="27 9 3"
-export G_DOMAINS_RES_AQMS_gov="27 9 3"
+export G_DOMAINS_RES_gov="27 9 3"
 
 if [ $FC_MODE -eq 0 ]; then
   export MET_SIM_N_DAYS=4
