--- a/PATH-SCRIPT-201609/domains_def.config
+++ b/PATH-SCRIPT-201609/domains_def.config
@@ -28,7 +28,8 @@ setenv DAY1FIXED 0
 #####################################################################
 #                   METEOROLOGY MODEL SYSTEM                        #
 #####################################################################
-
+set LAYERS_NUM_MMS = 39
+set GRID_RATIO_MMS_Dx = (1 3 3 3)
 
 set COL_CUT_MMS_Dx = (1 116 43 67)
 set ROW_CUT_MMS_Dx = (1 45 55 22)
