--- a/PATH-SCRIPT-201609/domains_def.config
+++ b/PATH-SCRIPT-201609/domains_def.config
@@ -6,7 +6,7 @@
 # Section METEOROLOGY MODEL SYSTEM (WRF) &
 #         AIR QUALITY MODEL SYSTEM (MCIP, MET2CAMX, SMOKE, CMAQ, CAMX)
 ######################################################################
-set G_DOMAINS_RES_WRF = (27 9 3)
+set SIM_DOMAINS_WRF = 3
 set G_DOMAINS_RES_MCIP = (27 9 3)
 set G_DOMAINS_RES_MET2CAMX = (27 9 3)
 set G_DOMAINS_RES_SMOKE = (27 9 3)
@@ -28,6 +28,7 @@ setenv DAY1FIXED 0
 #####################################################################
 #                   METEOROLOGY MODEL SYSTEM                        #
 #####################################################################
+set G_DOMAINS_RES_WRF = (27 9 3 1)
 set LAYERS_NUM_MMS = 39
 set GRID_RATIO_MMS_Dx = (1 3 3 3)
 
