--- a/fc_scripts-mod/domains_def.config
+++ b/fc_scripts-mod/domains_def.config
@@ -19,12 +19,12 @@
 #####################################################################
 #                      DOMAIN RESOLUTION                            #
 #####################################################################
-set SIM_DOMAINS_WRF = 4
-set G_DOMAINS_RES_MCIP = (27 9 3 1)
-set G_DOMAINS_RES_MET2CAMX = (27 9 3 1)
-#set G_DOMAINS_RES_SMOKE = (27 9 3 1)
-set G_DOMAINS_RES_CMAQ = (27 9 3)
-set G_DOMAINS_RES_CAMX = (27 9 3)
+set SIM_DOMAINS_WRF = 4 #nestings of WRF
+set G_DOMAINS_RES_MCIP = (27 9 3 1)        #
+set G_DOMAINS_RES_MET2CAMX = (27 9 3 1)    #
+#set G_DOMAINS_RES_SMOKE = (27 9 3 1)      #domain resolution of AQMS 
+set G_DOMAINS_RES_CMAQ = (27 9 3)          # 
+set G_DOMAINS_RES_CAMX = (27 9 3)          #
 
 #####################################################################
 #                         MAP INFORMATION                           #
