--- a/scripts-mod/domains_def.config
+++ b/scripts-mod/domains_def.config
@@ -20,58 +20,58 @@
 #                      DOMAIN RESOLUTION                            #
 #####################################################################
 set SIM_DOMAINS_WRF = 4 #nestings of WRF
-set G_DOMAINS_RES_MCIP = (27 9 3 1)        #
-set G_DOMAINS_RES_MET2CAMX = (27 9 3 1)    #
-#set G_DOMAINS_RES_SMOKE = (27 9 3 1)      #domain resolution of AQMS 
-set G_DOMAINS_RES_CMAQ = (27 9 3)          # 
-set G_DOMAINS_RES_CAMX = (27 9 3)          #
+set G_DOMAINS_RES_MCIP = (27 9 3 1)        #MCIP
+set G_DOMAINS_RES_MET2CAMX = (27 9 3 1)    #MET2CAMX
+#set G_DOMAINS_RES_SMOKE = (27 9 3 1)       
+set G_DOMAINS_RES_CMAQ = (27 9 3)          #CMAQ 
+set G_DOMAINS_RES_CAMX = (27 9 3)          #CAMX
 
 #####################################################################
 #                         MAP INFORMATION                           #
 #####################################################################
-set MAP_PROJECTION = "LAMBERT"
-setenv LAMBERT_CEN_LON 114
-setenv LAMBERT_CEN_LAT 28.5
-setenv LAMBERT_TRUE_LAT1 15
-setenv LAMBERT_TRUE_LAT2 40
-setenv LAMBERT_CEN_MERDIAN 114
-setenv POLAR_LON_POLE 114
-setenv POLAR_LAT_POLE 28.5
+set MAP_PROJECTION = "LAMBERT"  #WRF CAMX
+setenv LAMBERT_CEN_LON 114      #WRF MCIP CAMX
+setenv LAMBERT_CEN_LAT 28.5     #WRF MCIP CAMX
+setenv LAMBERT_TRUE_LAT1 15     #WRF MCIP CAMX
+setenv LAMBERT_TRUE_LAT2 40     #WRF MCIP CAMX
+setenv LAMBERT_CEN_MERDIAN 114  #MCIP CAMX 
+setenv POLAR_LON_POLE 114       #CAMX
+setenv POLAR_LAT_POLE 28.5      #CAMX
 
 #####################################################################
 #                   METEOROLOGY MODEL SYSTEM                        #
 #####################################################################
-set G_DOMAINS_RES_WRF = (27 9 3 1)
-set LAYERS_NUM_MMS = 39
-set GRID_RATIO_MMS_Dx = (1 3 3 3)
+set G_DOMAINS_RES_WRF = (27 9 3 1)   #WRF
+set LAYERS_NUM_MMS = 39              #WRF
+set GRID_RATIO_MMS_Dx = (1 3 3 3)    #WRF
 
-set COL_CUT_MMS_Dx = (1 116 43 67)
-set ROW_CUT_MMS_Dx = (1 45 55 22)
-set NCOLS_MMS_Dx = (283 223 172 214)
-set NROWS_MMS_Dx = (184 163 130 163)
+set COL_CUT_MMS_Dx = (1 116 43 67)   #WRF
+set ROW_CUT_MMS_Dx = (1 45 55 22)    #WRF
+set NCOLS_MMS_Dx = (283 223 172 214) #WRF
+set NROWS_MMS_Dx = (184 163 130 163) #WRF
 
 #####################################################################
 #                   AIR QUALITY MODEL SYSTEM                         #
 #####################################################################
-setenv PBLfix  #Used by MCIP
-setenv SrcVer "v3.4pbl" #Used by MET2CAMX
+setenv PBLfix           #MCIP
+setenv SrcVer "v3.4pbl" #MET2CAMX
 
-setenv DAY1FIXED 0
+setenv DAY1FIXED 0      #
 #setenv DAY1FIXED 1
 
-set LAYERS_NUM_AQMS = 26
-set NCOLS_AQMS_Dx = (182 98 152 179)
-set NROWS_AQMS_Dx = (138 74 110 125)
-set COL_CUT_AQMS_Dx = (52 20 11 23)
-set ROW_CUT_AQMS_Dx = (22 35 14 29)
-set XCRO_AQMS_Dx = (-2403. -522. -291. -103.)
-set YCRO_AQMS_Dx = (-1876.5 -967.5 -754.5 -704.5)
-set XDOT_AQMS_Dx = (-1876.5 -526.5 -292.5 -103.5)
-set YDOT_AQMS_Dx = (-1890. -972. -756. -705)
+set LAYERS_NUM_AQMS = 26                          #MET2CAMX CAMX
+set NCOLS_AQMS_Dx = (182 98 152 179)              #MICP MET2CAMX CAMX
+set NROWS_AQMS_Dx = (138 74 110 125)              #MCIP MET2CAMX CAMX
+set COL_CUT_AQMS_Dx = (52 20 11 23)               #MCIP
+set ROW_CUT_AQMS_Dx = (22 35 14 29)               #MCIP
+set XCRO_AQMS_Dx = (-2403. -522. -291. -103.)     #MCIP MET2CAMX CAMX
+set YCRO_AQMS_Dx = (-1876.5 -967.5 -754.5 -704.5) #MCIP MET2CAMX CAMX
+set XDOT_AQMS_Dx = (-1876.5 -526.5 -292.5 -103.5) #MCIP
+set YDOT_AQMS_Dx = (-1890. -972. -756. -705)      #MCIP
 
 #Note: The first domain is default and replaced by 0.
-set IWEST_AQMS_Dx = (0 71 27 64)
-set IEAST_AQMS_Dx = (0 102 76 122)
-set JSOUTH_AQMS_Dx = (0 35 25 18)
-set JNORTH_AQMS_Dx = (0 58 60 58)
+set IWEST_AQMS_Dx = (0 71 27 64)    #CAMX
+set IEAST_AQMS_Dx = (0 102 76 122)  #CAMX
+set JSOUTH_AQMS_Dx = (0 35 25 18)   #CAMX
+set JNORTH_AQMS_Dx = (0 58 60 58)   #CAMX
 
